# mailquill

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  categories.yaml  config.example.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bank_parser_request.md  bug_report.md  config.yml
docs/: SETUP.md
docs/superpowers/plans/: 2026-06-24-mailquill-core-backbone.md  2026-06-24-mailquill-ingestion-io.md  2026-06-24-mailquill-report.md  2026-06-24-mailquill-transform-pipeline.md
docs/superpowers/specs/: 2026-06-24-mailquill-finance-design.md
mailquill/: bootstrap.py  categorizer.py  cli.py  config.py  gmail_client.py  gmail_message.py  ingest.py  normalizer.py  pdf_text.py  pdf_unlocker.py  pipeline.py  raw_txn.py  report.py  rules.py  schema.py  store.py
mailquill/parsers/: __init__.py  _util.py  base.py  cathay.py  esun.py  example_bank.py  fubon.py  huanan.py  sinopac.py  taishin.py  ubot.py
tests/: test_bootstrap.py  test_categorizer.py  test_cli.py  test_cli_report.py  test_cli_run.py  test_config.py  test_gmail_client.py  test_gmail_message.py  test_ingest.py  test_normalizer.py  test_parsers.py  test_parsers_cathay.py  test_parsers_esun.py  test_parsers_fubon.py  test_parsers_huanan.py  test_parsers_sinopac.py  test_parsers_taishin.py  test_parsers_ubot.py  test_pdf_text.py  test_pdf_unlocker.py  test_pipeline.py  test_report.py  test_rules.py  test_schema.py  test_store.py
