[project]
name = "mailquill"
version = "0.1.0"
description = "Mailquill — local, rule-based Gmail finance archiving and reporting. Your bank statements, quietly reconciled."
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
    "pikepdf>=9.0",
    "pdfplumber>=0.11",
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-auth-httplib2>=0.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "reportlab>=4.0"]

[project.scripts]
mailquill = "mailquill.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mailquill*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
